--- a/package.json
+++ b/package.json
@@ -43,5 +43,6 @@
   "devDependencies": {
     "@types/react-router-dom": "^5.1.5",
     "gh-pages": "^3.1.0"
-  }
+  },
+  "homepage": "https://kwmin90.github.io/game_list_app_igdb_react/"
 }
